--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <p>
-            I did my homework!
+            I did my homework Done!
         </p>
         <img src="Lab1.png">
     </body>
